// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MCV — searcher-style quoting (no Quoter; eth_call only) NEG set first (ASSET-in derived) — static == exec; snapshots 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "assetToUsdc": true,
  "bundle": Object {
    "hash": "0x904a91699923a03fc8db8c579c93ab5f3662cdd24bc93b325266038b2b7bfe5b",
    "protocol": "mev-share",
  },
  "execution": Object {
    "hops": Array [
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990000990000990000",
        "assetToUsdc": true,
        "pool": "0xd8058efe0198ae9dD7D563e1b4938Dcbc86A1F81",
        "tokenIn": "0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9",
        "tokenOut": "0x5FC8d32690cc91D4c39d9d3abcBD16989F875707",
      },
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990000990000990000",
        "assetToUsdc": true,
        "pool": "0x6D544390Eb535d61e196c87d6B9c80dCD8628Acd",
        "tokenIn": "0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9",
        "tokenOut": "0x5FC8d32690cc91D4c39d9d3abcBD16989F875707",
      },
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990000990000990000",
        "assetToUsdc": true,
        "pool": "0xB1eDe3F5AC8654124Cb5124aDf0Fd3885CbDD1F7",
        "tokenIn": "0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9",
        "tokenOut": "0x5FC8d32690cc91D4c39d9d3abcBD16989F875707",
      },
    ],
    "userAssetDecrease": "3036000000000000000",
    "userUsdcOut": "2970002970002970000",
  },
  "fees": Object {
    "perHopPools": "10000000000000000",
    "perHopTotal": "12000000000000000",
    "perHopTreasury": "2000000000000000",
  },
  "note": "NEG set, ASSET-in. Quote via provider.call; no Contract.swap() arg walker.",
  "orbit": Array [
    "0xd8058efe0198ae9dD7D563e1b4938Dcbc86A1F81",
    "0x6D544390Eb535d61e196c87d6B9c80dCD8628Acd",
    "0xB1eDe3F5AC8654124Cb5124aDf0Fd3885CbDD1F7",
  ],
  "pools": Object {
    "after": Array [
      Object {
        "a": "101010000000000000000",
        "pool": "0xd8058efe0198ae9dD7D563e1b4938Dcbc86A1F81",
        "u": "99009999009999010000",
      },
      Object {
        "a": "101010000000000000000",
        "pool": "0x6D544390Eb535d61e196c87d6B9c80dCD8628Acd",
        "u": "99009999009999010000",
      },
      Object {
        "a": "101010000000000000000",
        "pool": "0xB1eDe3F5AC8654124Cb5124aDf0Fd3885CbDD1F7",
        "u": "99009999009999010000",
      },
    ],
    "before": Array [
      Object {
        "a": "100000000000000000000",
        "pool": "0xd8058efe0198ae9dD7D563e1b4938Dcbc86A1F81",
        "u": "100000000000000000000",
      },
      Object {
        "a": "100000000000000000000",
        "pool": "0x6D544390Eb535d61e196c87d6B9c80dCD8628Acd",
        "u": "100000000000000000000",
      },
      Object {
        "a": "100000000000000000000",
        "pool": "0xB1eDe3F5AC8654124Cb5124aDf0Fd3885CbDD1F7",
        "u": "100000000000000000000",
      },
    ],
  },
  "role": "MCV — searcher-quote",
  "routerStatic": "2970002970002970000",
  "usingNeg": true,
}
`;

exports[`MCV — searcher-style quoting (no Quoter; eth_call only) POS set first (USDC-in derived) — static == exec; snapshots 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "assetToUsdc": false,
  "bundle": Object {
    "hash": "0x06c4da46ece39ec504607b9f33bbd0f2e09c597033512b52c19faefcffaf0deb",
    "protocol": "mev-share",
  },
  "execution": Object {
    "hops": Array [
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990000990000990000",
        "assetToUsdc": false,
        "pool": "0xf9b42E09Fd787d6864D6b2Cd8E1350fc93E6683D",
        "tokenIn": "0xf5059a5D33d5853360D16C683c16e67980206f36",
        "tokenOut": "0x851356ae760d987E095750cCeb3bC6014560891C",
      },
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990000990000990000",
        "assetToUsdc": false,
        "pool": "0xd468bF477c0c99095D508c3B0A60f39348d91ac0",
        "tokenIn": "0xf5059a5D33d5853360D16C683c16e67980206f36",
        "tokenOut": "0x851356ae760d987E095750cCeb3bC6014560891C",
      },
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990000990000990000",
        "assetToUsdc": false,
        "pool": "0xe481c73B6236153D1dc22E510c51b312CD8E5e3f",
        "tokenIn": "0xf5059a5D33d5853360D16C683c16e67980206f36",
        "tokenOut": "0x851356ae760d987E095750cCeb3bC6014560891C",
      },
    ],
    "userAssetOut": "2970002970002970000",
  },
  "fees": Object {
    "perHopPools": "10000000000000000",
    "perHopTotal": "12000000000000000",
    "perHopTreasury": "2000000000000000",
  },
  "flippedToNegAfter": true,
  "note": "POS-first under dual-orbit; raw provider.call for quote, raw tx for exec.",
  "orbit": Array [
    "0xf9b42E09Fd787d6864D6b2Cd8E1350fc93E6683D",
    "0xd468bF477c0c99095D508c3B0A60f39348d91ac0",
    "0xe481c73B6236153D1dc22E510c51b312CD8E5e3f",
  ],
  "pools": Object {
    "after": Array [
      Object {
        "a": "99009999009999010000",
        "pool": "0xf9b42E09Fd787d6864D6b2Cd8E1350fc93E6683D",
        "u": "101010000000000000000",
      },
      Object {
        "a": "99009999009999010000",
        "pool": "0xd468bF477c0c99095D508c3B0A60f39348d91ac0",
        "u": "101010000000000000000",
      },
      Object {
        "a": "99009999009999010000",
        "pool": "0xe481c73B6236153D1dc22E510c51b312CD8E5e3f",
        "u": "101010000000000000000",
      },
    ],
    "before": Array [
      Object {
        "a": "100000000000000000000",
        "pool": "0xf9b42E09Fd787d6864D6b2Cd8E1350fc93E6683D",
        "u": "100000000000000000000",
      },
      Object {
        "a": "100000000000000000000",
        "pool": "0xd468bF477c0c99095D508c3B0A60f39348d91ac0",
        "u": "100000000000000000000",
      },
      Object {
        "a": "100000000000000000000",
        "pool": "0xe481c73B6236153D1dc22E510c51b312CD8E5e3f",
        "u": "100000000000000000000",
      },
    ],
  },
  "role": "MCV — searcher-quote",
  "routerStatic": "2970002970002970000",
  "startWith": "POS",
  "usingNeg": false,
}
`;

exports[`MCV — searcher-style quoting (no Quoter; eth_call only) dual-orbit flips: after first call (NEG/ASSET-in) → POS/USDC-in; static & deltas snapshot 1`] = `
Object {
  "bundleHashes": Object {
    "neg": "0x203f53d9e6926d1d425ca0d23dddfab6bf3b58ad9d4b41ec471a9a9a5bc26453",
    "pos": "0x9586def7986c96804f1ad9f97076f93e93a4d859b134e0f8161c671a260e7fb2",
  },
  "flip": "NEG→POS",
  "hops": 3,
  "lastKnownUserBalances": Object {
    "asset": "100000002970002970002970000",
    "usdc": "100000002970002970002970000",
  },
  "note": "Run #2 after flip — POS, USDC-in. Quote/exec via raw ABI; no argument mutation.",
  "role": "MCV — searcher-quote",
  "routerStatic": "2970002970002970000",
  "usingNegAfterFlip": true,
}
`;
